Support `entity_alias`
Closes: gh-690