@@ -25,6 +25,7 @@ import java.util.concurrent.TimeUnit;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
 
+import java.util.stream.StreamSupport;
 import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
 
@@ -63,9 +64,12 @@ public class VaultTokenRequest {
 	@JsonProperty("num_uses")
 	private final int numUses;
 
+	@JsonProperty("entity_alias")
+	private final String entityAlias;
+
 	VaultTokenRequest(@Nullable String id, List<String> policies, Map<String, String> meta, boolean noParent,
 			boolean noDefaultPolicy, boolean renewable, @Nullable String ttl, @Nullable String explicitMaxTtl,
-			String displayName, int numUses) {
+			String displayName, int numUses, String entityAlias) {
 
 		this.id = id;
 		this.policies = policies;
@@ -77,6 +81,7 @@ public class VaultTokenRequest {
 		this.explicitMaxTtl = explicitMaxTtl;
 		this.displayName = displayName;
 		this.numUses = numUses;
+		this.entityAlias = entityAlias;
 	}
 
 	/**
@@ -161,6 +166,15 @@ public class VaultTokenRequest {
 	}
 
 	/**
+	 * @return then name of the entity alias to associate with during token creation. Only
+	 * works in combination with role_name argument and used entity alias must be listed
+	 * in allowed_entity_aliases
+	 */
+	public String getEntityAlias() {
+		return this.entityAlias;
+	}
+
+	/**
 	 * Builder to build a {@link VaultTokenRequest}.
 	 */
 	public static class VaultTokenRequestBuilder {
@@ -187,6 +201,8 @@ public class VaultTokenRequest {
 		private String displayName = "";
 
 		private int numUses;
+
+		private String entityAlias;
 
 		VaultTokenRequestBuilder() {
 		}
@@ -399,44 +415,44 @@ public class VaultTokenRequest {
 		}
 
 		/**
+		 * Configure the entity alias for the token.
+		 * @param entityAlias must not be empty or {@literal null}.
+		 * @return {@code this} {@link VaultTokenRequestBuilder}.
+		 */
+		public VaultTokenRequestBuilder entityAlias(String entityAlias) {
+
+			Assert.hasText(entityAlias, "Entity alias must not be empty");
+
+			this.entityAlias = entityAlias;
+			return this;
+		}
+
+		/**
+		 * Build a new {@link VaultTokenRequest} instance.
+		 * @return a new {@link VaultCertificateRequest}.
+		 */
+		/**
 		 * Build a new {@link VaultTokenRequest} instance.
 		 * @return a new {@link VaultCertificateRequest}.
 		 */
 		public VaultTokenRequest build() {
 
-			List<String> policies;
-			switch (this.policies.size()) {
-				case 0:
-					policies = Collections.emptyList();
-					break;
-				case 1:
-					policies = Collections.singletonList(this.policies.get(0));
-					break;
-				default:
-					policies = Collections.unmodifiableList(new ArrayList<>(this.policies));
-
-			}
-			Map<String, String> meta;
-			switch (this.meta.size()) {
-				case 0:
-					meta = Collections.emptyMap();
-					break;
-				default:
-					meta = Collections.unmodifiableMap(new LinkedHashMap<>(this.meta));
-			}
+			List<String> policies = switch (this.policies.size()) {
+				case 0 -> List.of();
+				case 1 -> List.of(this.policies.get(0));
+				default -> List.copyOf(this.policies);
+			};
+			Map<String, String> meta = switch (this.meta.size()) {
+				case 0 -> Map.of();
+				default -> Collections.unmodifiableMap(new LinkedHashMap<>(this.meta));
+			};
 
 			return new VaultTokenRequest(this.id, policies, meta, this.noParent, this.noDefaultPolicy, this.renewable,
-					this.ttl, this.explicitMaxTtl, this.displayName, this.numUses);
+					this.ttl, this.explicitMaxTtl, this.displayName, this.numUses, this.entityAlias);
 		}
 
 		private static <E> List<E> toList(Iterable<E> iter) {
-
-			List<E> list = new ArrayList<>();
-			for (E item : iter) {
-				list.add(item);
-			}
-
-			return list;
+			return StreamSupport.stream(iter.spliterator(), false).toList();
 		}
 
 	}
